<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">D&amp;D 5e Character Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="title_activity_combat">CombatActivity</string>
    <string name="title_activity_notes">NotesActivity</string>

    <!-- **************** XML Helpers **************** -->

    <!-- Menu HUD -->
    <string name="but_hamburger_menu">Menu</string>
    <string name="but_search">Search</string>
    <string name="text_screen_title">Screen Title</string>
    <string name="but_open_hamburger">Open Menu</string>
    <string name="but_close_hamburger">Close Menu</string>
    <string name="text_testing">Testing!</string>

    <!-- Hamburger Menu -->
    <string name="hint_character_name">Name</string>
    <string name="hint_character_race">Race</string>
    <string name="hint_character_class">Class</string>
    <string name="hint_character_gender">Gender</string>
    <string name="hint_character_alignment">Alignment</string>
    <string name="hint_character_background">Background</string>
    <string name="text_character_info_screen">Character Info</string>
    <string name="text_combat_screen">Combat</string>
    <string name="text_inventory_screen">Inventory</string>
    <string name="text_notes_screen">Notes</string>
    <string name="but_modify_character_identity">Modify Character Identity</string>

    <!-- Screen Titles -->
    <string name="text_character_title">Character Info</string>
    <string name="text_combat_title">Combat</string>
    <string name="text_inventory_title">Inventory</string>
    <string name="text_notes_title">Notes</string>
    <!-- Stats -->
    <string name="ability_dummy_name">Stat</string>
    <string name="stat_default_val">--</string>
    <!-- Skills -->
    <string name="text_default_val"> +0</string>
    <string name="text_acrobatics">Acrobatics</string>
    <string name="text_animal_handling">Animal Handling</string>
    <string name="text_arcana">Arcana</string>
    <string name="text_athletics">Athletics</string>
    <string name="text_deception">Deception</string>
    <string name="text_history">History</string>
    <string name="text_insight">Insight</string>
    <string name="text_intimidation">Intimidation</string>
    <string name="text_investigation">Investigation</string>
    <string name="text_medicine">Medicine</string>
    <string name="text_nature">Nature</string>
    <string name="text_perception">Perception</string>
    <string name="text_performance">Performance</string>
    <string name="text_persuasion">Persuasion</string>
    <string name="text_religion">Religion</string>
    <string name="text_sleight_of_hand">Sleight of Hand</string>
    <string name="text_stealth">Stealth</string>
    <string name="text_survival">Survival</string>

    <!-- Buttons -->
    <string name="but_delete_char">Delete Character</string>
    <string name="but_modify_char">Modify Character</string>
    <string name="but_modify_exp">Add Experience</string>

    <!-- Footer HUD -->
    <string name="text_level">Level:</string>
    <string name="text_level_progress">0 / 100</string>

    <!-- Currencies -->
    <string name="text_platinum">Platinum</string>
    <string name="text_gold">Gold</string>
    <string name="text_silver">Silver</string>
    <string name="text_copper">Copper</string>
    <string name="text_subtract">subtract</string>
    <string name="text_add_currency_title">Modify Currency</string>
    <string name="hint_currency">0</string>

    <string name="carry_weight">Carry Weight</string>
    <string name="carry_weight_start">0</string>
    <string name="carry_weight_max">/ 0</string>
    <string name="inventory_add_item">Add Item</string>
    <string name="inventory_delete_all">Delete All</string>
    <string name="inventory_delete_item">Delete Item</string>
    <string name="inventory_is_weapon_checkbox">Weapon?</string>
    <string name="inventory_delete_item_message">Are you sure you want to delete this item?</string>
    <string name="inventory_delete_item_title">Delete Item</string>
    <string name="inventory_modify_item_title">Modify Item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_hint">Enter notes here…</string>
    <string name="ability_name_strength">STR</string>
    <string name="ability_name_dexterity">DEX</string>
    <string name="ability_name_constitution">CON</string>
    <string name="ability_name_intelligence">INT</string>
    <string name="ability_name_wisdom">WIS</string>
    <string name="ability_name_charisma">CHR</string>
    <string name="text_armor_class">Armor Class</string>
    <string name="text_0">0</string>
    <string name="text_afoot_speed">Speed</string>
    <string name="text_initiative">Initiative</string>
    <string name="text_weapon_default_val">XdX + base + type</string>
    <string name="text_weapon_name">Weapon Name</string>
    <string name="text_weapon_base_add_default_val">+X</string>
    <string name="text_minus">-</string>
    <string name="text_plus">+</string>
    <string name="text_none">none</string>
    <string name="text_empty">0</string>
    <string name="text_ammo">Ammo</string>
    <string name="hint_new_value">new value</string>
    <string name="text_current_health_title">Current Health</string>
    <string name="text_weapons_title">Weapons</string>
    <string name="text_ammunition_title">Ammunition</string>
    <string name="text_weapon">Weapon</string>
    <string name="text_add_combat_item">Add Combat Item</string>
    <string name="text_attack_bonus">Attack Bonus</string>
    <string name="text_add_weapon">Add Weapon</string>
    <string name="text_add_ammunition">Add Ammunition</string>
    <string name="text_remove_equipped_weapon">Remove equipped weapon</string>
    <string name="text_remove_equipped_ammo">Remove equipped ammunition</string>
    <string name="text_are_you_sure">Are you sure you want to…</string>
    <string name="text_weapon_equipped">Weapon equipped</string>
    <string name="text_weapon_unequipped">Weapon unequipped</string>
    <string name="text_invalid_ammo_amount">Invalid ammunition amount</string>
    <string name="text_invalid_health_amount">Invalid health amount</string>

</resources>
