<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/soft_red">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/value_health"
        android:text="@string/text_0"
        android:textSize="@dimen/large_font"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_health"
        android:text="@string/text_current_health_title"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="@dimen/large_font"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/minimum_padding"
            android:minWidth="@dimen/minimum_padding"
            android:id="@+id/button_subtract_health"
            android:text="@string/text_minus"
            android:paddingStart="@dimen/large_padding"
            android:paddingEnd="@dimen/large_padding"
            android:textSize="@dimen/medium_font"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/minimum_padding"
            android:minWidth="@dimen/minimum_padding"
            android:id="@+id/button_add_health"
            android:text="@string/text_plus"
            android:paddingStart="@dimen/large_padding"
            android:paddingEnd="@dimen/large_padding"
            android:textSize="@dimen/medium_font"/>
    </LinearLayout>


</LinearLayout>
