<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10.0">

    <include layout="@layout/level_display"
        android:id="@+id/include_level_display"
        android:layout_width="@dimen/level_display_size"
        android:layout_height="@dimen/level_display_size"
        android:layout_margin="@dimen/default_padding"/>

    <TextView
        android:id="@+id/text_character_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_character_name"
        android:layout_toEndOf="@id/include_level_display"
        android:textSize="@dimen/large_font"
        android:paddingTop="@dimen/default_padding"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"/>

    <TextView
        android:id="@+id/text_character_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_character_race"
        android:layout_toEndOf="@id/include_level_display"
        android:layout_below="@id/text_character_name"
        android:textSize="@dimen/medium_font"
        android:paddingTop="@dimen/default_padding"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"/>

    <TextView
        android:id="@+id/text_character_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_character_class"
        android:layout_toEndOf="@id/text_character_race"
        android:layout_below="@id/text_character_name"
        android:textSize="@dimen/medium_font"
        android:paddingTop="@dimen/default_padding"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"/>


    <TextView
        android:id="@+id/text_character_alignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_character_alignment"
        android:textSize="@dimen/medium_font"
        android:layout_alignParentStart="true"
        android:layout_below="@id/include_level_display"
        android:paddingTop="@dimen/default_padding"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"/>

    <TextView
        android:id="@+id/text_character_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_character_background"
        android:textSize="@dimen/medium_font"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text_character_alignment"
        android:paddingTop="@dimen/default_padding"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"/>


</RelativeLayout>