<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/tan">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/inv_carry_layout"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/inv_carry_label"
            android:text="@string/carry_weight"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textSize="@dimen/small_font"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/inv_carry_curr"
            android:text="@string/carry_weight_start"
            android:textColor="@color/black"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:textSize="@dimen/small_font"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/inv_carry_max"
            android:text="@string/carry_weight_max"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textSize="@dimen/small_font"/>

    </LinearLayout>

</RelativeLayout>
