<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageButton
        android:id="@+id/but_hamburger_menu"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/icon_hamburger_menu32x32"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:scaleType="centerInside"
        android:background="@null"
        android:layout_marginStart="@dimen/large_padding"
        android:layout_marginEnd="@dimen/large_padding"
        android:contentDescription="@string/but_hamburger_menu"/>

    <TextView
        android:id="@+id/text_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_screen_title"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:textColor="@color/off_white"
        android:layout_toRightOf="@id/but_hamburger_menu"/>

    <ImageButton
        android:layout_width="56dp"
        android:layout_height="42dp"
        android:src="@android:drawable/ic_search_category_default"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/default_padding"
        android:layout_margin="0dp"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:contentDescription="@string/but_search"/>

</RelativeLayout>