<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="horizontal"
    android:paddingStart="@dimen/default_padding"
    android:paddingEnd="@dimen/default_padding"
    android:weightSum="10.0">

    <!-- Column One -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="5.0">
        <!-- Acrobatics -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_acrobatics"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_acrobatics"
                android:id="@+id/char_acrobatics"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Animal Handling -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_animal_handling"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_animal_handling"
                android:id="@+id/char_animal_handling"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Arcana -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_arcana"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_arcana"
                android:id="@+id/char_arcana"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Athletics -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_athletics"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_athletics"
                android:id="@+id/char_athletics"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Deception -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_deception"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_deception"
                android:id="@+id/char_deception"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- History -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_history"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_history"
                android:id="@+id/char_history"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Insight -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_insight"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_insight"
                android:id="@+id/char_insight"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Intimidation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_intimidation"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_intimidation"
                android:id="@+id/char_intimidation"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Investigation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_investigation"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_investigation"
                android:id="@+id/char_investigation"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Column Two -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="5.0">

        <!-- Medicine -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_medicine"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_medicine"
                android:id="@+id/char_medicine"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Nature -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_nature"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nature"
                android:id="@+id/char_nature"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Perception -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_perception"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_perception"
                android:id="@+id/char_perception"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Performance -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_performance"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/text_performance"
                android:id="@+id/char_performance"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Persuasion -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_persuasion"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_persuasion"
                android:id="@+id/char_persuasion"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Religion -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_religion"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_religion"
                android:id="@+id/char_religion"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Sleight of Hand -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_sleight_of_hand"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sleight_of_hand"
                android:id="@+id/char_sleight_of_hand"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Stealth -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_stealth"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_stealth"
                android:id="@+id/char_stealth"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

        <!-- Survival -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mod_survival"
                android:text="@string/text_default_val"
                android:textSize="@dimen/medium_font"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="-4dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_survival"
                android:id="@+id/char_survival"
                android:textSize="@dimen/very_small_font"
                android:clickable="false"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
